resolve z-index on details panel

--- a/src/apps/content-editor/src/app/components/Editor/PreviewMode/PreviewMode.less
+++ b/src/apps/content-editor/src/app/components/Editor/PreviewMode/PreviewMode.less
@@ -21,7 +21,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 11;
+    z-index: 10;
     width: 100%;
     border-radius: 8px;
 
